Add - Repository - Product model - Product controller and View

--- a/WebStore.DAL/WebStore.DAL.csproj
+++ b/WebStore.DAL/WebStore.DAL.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6C2AABBF-E9AB-4513-B887-41BEE96D3B5B}</ProjectGuid>
+    <ProjectGuid>{5DE4B403-2A10-4BCC-A07E-A4BECDA134B0}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>WebStore.Domain</RootNamespace>
-    <AssemblyName>WebStore.Domain</AssemblyName>
+    <RootNamespace>WebStore.DAL</RootNamespace>
+    <AssemblyName>WebStore.DAL</AssemblyName>
     <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,8 +40,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Entities\Category.cs" />
-    <Compile Include="Entities\Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
