--- a/WebStore.WebUI/WebStore.WebUI.csproj
+++ b/WebStore.WebUI/WebStore.WebUI.csproj
@@ -107,19 +107,38 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\bootstrap.css" />
+    <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Site.css" />
+    <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
+    <Content Include="Scripts\bootstrap.js" />
+    <Content Include="Scripts\bootstrap.min.js" />
+    <None Include="Scripts\jquery-1.10.2.intellisense.js" />
+    <Content Include="Scripts\jquery-1.10.2.js" />
+    <Content Include="Scripts\jquery-1.10.2.min.js" />
+    <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\ProductController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Infrastructure\NinjectRegistrations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
+    <Content Include="fonts\glyphicons-halflings-regular.woff" />
+    <Content Include="fonts\glyphicons-halflings-regular.ttf" />
+    <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <None Include="packages.config" />
+    <Content Include="Views\_ViewStart.cshtml" />
+    <Content Include="Views\Shared\_Layout.cshtml" />
+    <Content Include="Views\Product\List.cshtml" />
+    <Content Include="Scripts\jquery-1.10.2.min.map" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -129,14 +148,20 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Controllers\" />
-    <Folder Include="Infrastructure\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\WebStore.Contructs\WebStore.Contructs.csproj">
+      <Project>{4cfb87de-3ae3-4ef1-aa51-241dbfb51abe}</Project>
+      <Name>WebStore.Contructs</Name>
+    </ProjectReference>
     <ProjectReference Include="..\WebStore.Models\WebStore.Domain.csproj">
       <Project>{6c2aabbf-e9ab-4513-b887-41bee96d3b5b}</Project>
       <Name>WebStore.Domain</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\WebStore.Services\WebStore.Services.csproj">
+      <Project>{1477f186-5ffe-430a-94f2-f5f5e0369c9b}</Project>
+      <Name>WebStore.Services</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
