--- a/WebStore.Contructs/WebStore.Contructs.csproj
+++ b/WebStore.Contructs/WebStore.Contructs.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6C2AABBF-E9AB-4513-B887-41BEE96D3B5B}</ProjectGuid>
+    <ProjectGuid>{4CFB87DE-3AE3-4EF1-AA51-241DBFB51ABE}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>WebStore.Domain</RootNamespace>
-    <AssemblyName>WebStore.Domain</AssemblyName>
+    <RootNamespace>WebStore.Contructs</RootNamespace>
+    <AssemblyName>WebStore.Contructs</AssemblyName>
     <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,9 +40,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Entities\Category.cs" />
-    <Compile Include="Entities\Product.cs" />
+    <Compile Include="IProductRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\WebStore.Models\WebStore.Domain.csproj">
+      <Project>{6c2aabbf-e9ab-4513-b887-41bee96d3b5b}</Project>
+      <Name>WebStore.Domain</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
