--- a/WebStore.Tests/WebStore.Tests.csproj
+++ b/WebStore.Tests/WebStore.Tests.csproj
@@ -100,6 +100,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\WebStore.Contructs\WebStore.Contructs.csproj">
+      <Project>{4CFB87DE-3AE3-4EF1-AA51-241DBFB51ABE}</Project>
+      <Name>WebStore.Contructs</Name>
+    </ProjectReference>
     <ProjectReference Include="..\WebStore.Models\WebStore.Domain.csproj">
       <Project>{6c2aabbf-e9ab-4513-b887-41bee96d3b5b}</Project>
       <Name>WebStore.Domain</Name>
