--- a/WebStore.Contructs/WebStore.Contructs.csproj
+++ b/WebStore.Contructs/WebStore.Contructs.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IOrderProcessor.cs" />
     <Compile Include="IProductRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
