--- a/WebStore.Services/WebStore.Services.csproj
+++ b/WebStore.Services/WebStore.Services.csproj
@@ -47,6 +47,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EmailOrderProcessor.cs" />
+    <Compile Include="EmailSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\ProductRepository.cs" />
   </ItemGroup>
