--- a/WebStore.DAL/WebStore.DAL.csproj
+++ b/WebStore.DAL/WebStore.DAL.csproj
@@ -52,6 +52,10 @@
     <Compile Include="Migrations\201711261904571_InitialMigration.Designer.cs">
       <DependentUpon>201711261904571_InitialMigration.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201712071216117_Annotations.cs" />
+    <Compile Include="Migrations\201712071216117_Annotations.Designer.cs">
+      <DependentUpon>201712071216117_Annotations.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebStoreContext.cs" />
@@ -69,6 +73,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201711261904571_InitialMigration.resx">
       <DependentUpon>201711261904571_InitialMigration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201712071216117_Annotations.resx">
+      <DependentUpon>201712071216117_Annotations.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
