--- a/WebStore.WebUI/packages.config
+++ b/WebStore.WebUI/packages.config
@@ -4,10 +4,12 @@
   <package id="Castle.Core" version="4.2.1" targetFramework="net47" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net47" />
   <package id="jQuery" version="3.2.1" targetFramework="net47" />
+  <package id="jQuery.Validation" version="1.8.0.1" targetFramework="net47" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net47" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net47" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net47" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.8" targetFramework="net47" />
+  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net47" />
   <package id="Microsoft.Net.Compilers" version="2.4.0" targetFramework="net47" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net47" />
   <package id="Modernizr" version="2.8.3" targetFramework="net47" />
